# okx-paper-bot

./: .gitignore  README.md  alembic.ini  pyproject.toml  strategies.json
.playwright-cli/: page-2026-05-19T08-58-19-159Z.yml  page-2026-05-19T09-06-06-053Z.yml
alembic/: env.py
alembic/versions/: 0001_init.py
docs/plans/: 2026-05-17-dashboard-v2-upgrade.md  2026-05-20-workflow-split.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.jsx  styles.css
scripts/: check_notifications.py  okx-monitor.py
src/okx_paper_bot/: __init__.py  backtest.py  backtester.py  bot.py  cli.py  config.py  dashboard.py  dashboard_backend.txt  dashboard_html_final.txt  exchange.py  grid.py  notifier.py  notify.py  paper.py  risk.py  runner.py  stats.py  store.py  strategies.py  strategy.py
src/okx_paper_bot/api/: __init__.py
src/okx_paper_bot/backtest/: __init__.py
src/okx_paper_bot/brokers/: __init__.py
src/okx_paper_bot/experiments/: __init__.py
src/okx_paper_bot/market/: __init__.py
src/okx_paper_bot/persistence/: db.py  models.py
src/okx_paper_bot/risk/: __init__.py
src/okx_paper_bot/strategies/: __init__.py
static/js/: dashboard.js
tests/: conftest.py  test_api.py  test_backtest.py  test_bot.py  test_brokers_and_risk.py  test_config.py  test_dashboard.py  test_exchange.py  test_experiments.py  test_grid.py  test_market.py  test_notify.py  test_paper.py  test_risk.py  test_runner.py  test_store.py  test_strategies.py  test_strategy.py
