[project]
name = "okx-paper-bot"
version = "0.1.0"
description = "OKX demo trading quant bot for practice"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "fastapi>=0.115.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[project.scripts]
okx-paper-bot = "okx_paper_bot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okx_paper_bot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
